# xiaozhi-esp32

./: .gitignore  CLAUDE.md  CMakeLists.txt  mydazy-p30-migration-guide.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/78__esp-ml307/: CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/78__esp-ml307/include/: at_modem.h  at_uart.h  http.h
components/78__esp-ml307/src/: at_modem.cc  at_uart.cc  http_client.cc
components/78__esp-ml307/src/esp/: esp_ssl.cc
components/78__esp-ml307/src/ml307/: ml307_at_modem.cc  ml307_at_modem.h  ml307_http.cc  ml307_http.h  ml307_mqtt.cc  ml307_tcp.cc  ml307_tcp.h
components/lcd_driver/: CMakeLists.txt  README.md  idf_component.yml  lcd_0p71_160x160_gc9d01.cc  lcd_0p9_160x80_st7735p3.cc  lcd_1p28_240x240_gc9a01.cc  lcd_1p28_240x240_st77916.cc  lcd_1p32_128x128_gc9106.cc  lcd_1p83_240x284_jd9853.cc  lcd_driver_factory.cc
components/lcd_driver/include/: lcd_driver_factory.h
components/mydazy__esp_mp3_player/: .component_hash  .gitignore  CHANGELOG.md  CHECKSUMS.json  CMakeLists.txt  LICENSE  README.md  idf_component.yml  mp3_player.cc
components/mydazy__esp_mp3_player/examples/basic/: CMakeLists.txt  README.md
components/mydazy__esp_mp3_player/examples/basic/main/: CMakeLists.txt  basic_main.cc  idf_component.yml
components/mydazy__esp_mp3_player/include/: mp3_player.h
docs/: WiFi-vs-4G-RAM对比.html  edu-mcp-tools.sql  edu-prompt-v5.md  edu-prompt-v6.md  edu-scenarios.md  education-card-charset.md  education-card-isolation-plan.md  education-card-layout.html  education-card-lvgl-upgrade-plan.md  education-card-test-matrix.md  known-issues.md  mic-calibration.md  p30-4g-interaction-flow.html  p30-accelerometer-flows.html  p30-alarm-flows.html  p30-architecture-review.md  p30-architecture.html  p30-architecture.md  p30-audio-flows.html  p30-baidu-review.html  p30-bluetooth-flows.html  p30-blufi-flows.html  p30-board-4g-flows.html  p30-box-codec-flows.html  p30-business-flows.html  p30-edu-card.html  p30-flow-engine.html  p30-flow-review.html  p30-flow-test.html  p30-mcp-flows.html  p30-ml307-flows.html  p30-power-flows.html  p30-protocol-alignment.html  p30-protocol-baidu.html  p30-protocol-flows.html  p30-resource-plan.html  p30-sc7a20h-flows.html  p30-signal-flows.html  p30-test-checklist.md  p30-test-sop-user.html  (+18 more)
main/: CMakeLists.txt  Kconfig.projbuild  activity_type.h  alarm_manager.cc  alarm_manager.h  application.cc  application.h  assets.cc  audio_source.h  device_state_event.cc  device_state_event.h  device_state_machine.cc  device_state_machine.h  edu_scene_pool.cc  edu_scene_pool.h  flow_engine.cc  flow_engine.h  idf_component.yml  live_companion.cc  live_companion.h  main.cc  mcp_server.cc  mcp_server.h  ota.cc  ota.h  ota_http_download.cc  ota_http_download.h  pomodoro_manager.cc  pomodoro_manager.h  remote_cmd.cc  remote_cmd.h  scene_type.h  settings.cc  settings.h  system_info.cc  system_info.h
scripts/: aging-monitor.sh  build_default_assets.py  check_font_in_assets.py  (+1 more)
(+351 files in other folders)
